# CN-CA4-TCP

./: README.md
Client/: CMakeCache.txt  CMakeLists.txt  Makefile  client-tcp  client.txt  cmake_install.cmake
Client/Client/: Client.cpp  Client.h
Client/File Handler/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
Client/Packet/: Packet.h  PacketHandler.cpp  PacketHandler.h
Client/RED/: red.hpp
Client/Receiver/: Receiver.cpp  Receiver.h
Client/SR/: SR_Receiver.cpp  SR_Receiver.h
Client/Sender/: Sender.cpp  Sender.h
Client/Utils/: constants.h
Server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  serverMain.cpp  tcp_protocol
Server/File Handler/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
Server/Packet/: Packet.h  PacketHandler.cpp  PacketHandler.h
Server/Receiver/: Receiver.cpp  Receiver.h
Server/SR/: SR_Receiver.cpp  SR_Receiver.h  SR_Sender.cpp  SR_Sender.h
Server/Sender/: Sender.cpp  Sender.h
Server/Server/: Server.cpp  Server.h
Server/Utils/: constants.h
